<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    android:background="#FAFAFA"
    tools:context=".Activity.Activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo_demo"
            android:contentDescription="@string/car" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.90"
            android:weightSum="5"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_shape_input"
            android:orientation="horizontal">

            <com.rilixtech.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:ccp_defaultNameCode="BD"
                android:foregroundGravity="center"
                android:gravity="center"
                app:ccp_textFont="16sp"
                android:layout_marginBottom="1dp"

                app:ccp_textColor="#000000"/>
            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:padding="5dp"
                android:hint="Contact Number"
                android:textColorHint="#000000"
                android:inputType="phone"
                android:maxLength="11"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_contact"
                android:paddingLeft="15dp"
                android:background="@android:color/transparent"
                android:textColor="#000000"
                android:layout_marginBottom="1dp"
                android:textCursorDrawable="@android:color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:text=""/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.90"
            android:background="@drawable/rounded_shape_input"
            android:drawableLeft="@drawable/ic_lock"
            android:gravity="center"
            android:hint="@string/password"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:paddingLeft="15dp"

            android:textCursorDrawable="@android:color/white"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_shape_button"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:clickable="true"
            android:gravity="right"
            android:layout_marginTop="10dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="textEnd"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:textSize="16sp"
            android:focusable="true" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:indeterminateTint="#FF3B30"
            android:layout_gravity="center"
            android:progressDrawable="@drawable/circle" />

    </LinearLayout>
</LinearLayout>