<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    android:background="#FAFAFA"
    tools:context=".Activity.Activity.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".75">

        <TextView
            android:id="@+id/signInWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="25dp"
            android:text="Welcome Back,"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/signInWelcome"
            android:layout_below="@+id/signInWelcome"
            android:layout_marginTop="-60dp"
            android:textSize="22sp"
            android:text="Sign in to continue"
            android:layout_alignLeft="@+id/signInWelcome" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.90"
            android:weightSum="5"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <com.rilixtech.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                app:ccp_textColor="#777777"
                app:ccp_defaultNameCode="BD"
                android:foregroundGravity="center"
                android:gravity="center"
                app:ccp_textFont="16sp"
                android:layout_marginBottom="1dp" />
            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:padding="5dp"
                android:hint="Contact Number"
                android:textColorHint="#777777"
                android:inputType="phone"
                android:maxLength="11"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_contact"
                android:paddingLeft="15dp"
                android:layout_marginBottom="1dp"
                android:textCursorDrawable="@android:color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:text=""/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.90"
            android:drawableLeft="@drawable/ic_lock"
            android:gravity="center"
            android:hint="@string/password"
            android:textColorHint="#777777"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textCursorDrawable="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/buttonSignIn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in"
                android:textColor="#38008c"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="right"
                android:layout_marginTop="10dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="textEnd"
                android:text="@string/forgot_password"
                android:textColor="#ff2828"
                android:textSize="18sp"
                android:focusable="true"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">
        android:layout_marginRight="20dp">

        <ImageView
            android:background="@drawable/search"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/exit" />

    </LinearLayout>

</LinearLayout>